--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,21 +34,24 @@ li {
 }
 
 .weather-icon {
-  height: 64px;
-  width: 64px;
-  margin-right: 10px;
+  /* height: 60px;
+  width: 60px; */
+  /* margin-right: 10px; */
 }
 
 .temperature {
   color: rgb(33, 33, 33);
-  font-size: 64px;
+  font-size: 60px;
   font-weight: 400;
   line-height: 1;
+  
 }
 
 .units {
   position: relative;
-  top: -34px;
+  /* top: -34px; */
+  font-size: 16px;
+  padding-left: 0;
 }
 
 .search-form {
@@ -58,10 +61,9 @@ li {
   text-transform: capitalize;
 }
 #celsius-link {
-  font-size: 24px;
-  position: absolute;
-  left: 10px;
-  top: 0;
+  /* position: absolute; */
+  /* left: 10px;
+  top: 0; */
 }
 #city {
   font-size: 28px;
