--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,6 +44,8 @@ li {
   font-size: 60px;
   font-weight: 400;
   line-height: 1;
+  margin-right: 0;
+  padding-right: 0;
 }
 
 .units {
@@ -59,11 +61,7 @@ li {
 #weatherName {
   text-transform: capitalize;
 }
-#celsius-link {
-  /* position: absolute; */
-  /* left: 10px;
-  top: 0; */
-}
+
 #city {
   font-size: 28px;
   line-height: 50px;
@@ -77,4 +75,15 @@ a {
 .units .active {
   cursor: default;
   color: rgb(33, 33, 33);
+}
+#weather-img{
+  margin-right: 10px;
+  margin-left: 0;
+  padding-right: 10px;
+  align-items: center;
+}
+#weather-tempreture{
+  margin-right: 0;
+  padding-right: 0;
+  width: fit-content;
 }
